mostra-espirita/2023/fep-mostra-espirita-2023-frontend-web/src/app/views/pages/split-page/split-page.component.scss
.left {
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../../../assets/images/bg-fep.jpg");
    background-position: center;
    background-size: cover;
    height: 100%;
    box-shadow: inset -20px 0px 15px -3px #8b786a;
}
.right {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../../../assets/images/bg-mostra.jpg");
    background-position: center;
    background-size: cover;
    box-shadow: inset 20px 0px 15px -3px #8b786a;
}
@media (max-width: 768px) {
    .left {
        height: 50%;
    }
    .right {
        height: 50%;
    }
}

